6.1.7
-----
1. Fix dialog list sizing on iOS.
2. Fix home button in iframe dialogs.
3. Fix 'Show when wide enough' string.
4. Show home button in certain dialogs, if requested by caller, regardless of
   setting.
5. If a SlimBrowse header has no actions then ignore clicks.
6. Ignore swipes when non-pinned queue is shown.
7. Fix various actions (such as scrolling) when non-pinned queue shown over
   now-playing.
8. Show 'More' on far left for SlimBrowse headers with an action.

6.1.6
-----
1. Fix tiny sub-text in expanded now-playing at certain sizes.
2. Check if can use 'query_param' in Perl code.
3. When virtual keyboard is show, check if item is in list for mobile as well
   as desktop view.

6.1.5
-----
1. When requesting 'Random albums/releases' for scrolled lists obtain complete
   list, but initially only show N items - use stored list for 'More'.
2. Fix invoking 'Download' from scrolled list.
3. Add note about popups to download confirmation dialog.
4. Disable downloads on iOS once more.
5. Fix scrolled list order being reset.
6. Fix scrolled list selection dialog when items have multi-line sub-text.
7. Add Swedish translation - thanks to Johan Saaw.

6.1.4
-----
1. Don't show group player's in sync dialog, instead allow showing sync dialog
   from group player (but only if group is playing).
2. Fix reading 'Show ratings' from default settings.
3. If track has a grouping, or disc-subtitle, then show this after album in
   now-playing.
4. Don't prompt for confirmation when power on/off all players from 'Manage
   players' dialog.
5. Add menu to navigation drawer to sleep or power on/off all players.
6. Allow 3rd party scrolled lists to update titles - thanks to Michael Herger.

6.1.3
-----
1. Add group players to sync dialog.
2. Only handle 'Esc' key if keyboard shortcuts enabled.
3. Allow list of 3rd party scrolled lists to be updated.
4. When dropping external files onto queue don't clear any existing tracks.
5. Allow downloads on iOS.