@@ -1,3 +1,7 @@
+x.x.x
+-----
+1. Add icons to global search entries.
+
 6.1.7
 -----
 1. Fix dialog list sizing on iOS.
